--- a/web/themes/custom/theme_sdd/templates/block/block.html.twig
+++ b/web/themes/custom/theme_sdd/templates/block/block.html.twig
@@ -26,7 +26,7 @@
  * @see template_preprocess_block()
  */
 #}
-<div{{attributes}}>
+{# <div{{attributes}}> #}
 	{{ title_prefix }}
 	{% if label %}
 		{# <h2{{ title_attributes }}>{{ label }}</h2> #}
@@ -41,4 +41,4 @@
 	{% block content %}
 		{{ content }}
 	{% endblock %}
-</div>
+{# </div> #}
