--- a/web/modules/custom/sharjah_dd/templates/front-latest-news.html.twig
+++ b/web/modules/custom/sharjah_dd/templates/front-latest-news.html.twig
@@ -11,9 +11,9 @@
 
 			<div class="flex md:items-center mb-16 md:m-0 items-start justify-between flex-col md:flex-row">
 				<div class="max-w-[470px]">
-					<h2 class="md:mb-10 md:text-4xl mb-6  text-2xl">
-						{{ items.description|render|striptags|trim }}
-					</h2>
+					
+						{{ items.description|raw }}
+					
 				</div>
 				<a href="{{ path('view.news.main_page') }}" class="group/btn relative inline-flex h-[51px] rounded-full border border-[#D4D4D8] bg-[#F9FAFB] py-3 pe-[65px] ps-7 text-[#6A7282] transition-all hover:border-orange hover:bg-[#FFF3E9] hover:text-orange">
 					<span class=" ">{{ "Discover more"|t }}</span>
