--- a/web/themes/custom/theme_sdd/templates/paragraph/paragraph--our-values.html.twig
+++ b/web/themes/custom/theme_sdd/templates/paragraph/paragraph--our-values.html.twig
@@ -40,7 +40,8 @@
 #}
 
 <div class="bg-[#F9FAFB] p-8 rounded-2xl border border-[#E5E7EB] grid gap-4">
-	<i class="fa fa-{{ content.field_font_class|render|striptags|trim|lower|raw }}  text-5xl text-orange"></i>
+	{# <i class="fa fa-{{ content.field_font_class|render|striptags|trim|lower|raw }}  text-5xl text-orange"></i> #}
+	{{ content.field_shared_icon }} 
 	<h3 class="text-2xl font-bold">{{ title_short }}</h3>
 	<p class="text-[#6A7282] leading-7">
 		{{ description_short }}
