--- a/web/themes/custom/theme_sdd/templates/includes/_footer.html.twig
+++ b/web/themes/custom/theme_sdd/templates/includes/_footer.html.twig
@@ -53,7 +53,7 @@
             
 			<div class="item1">
 				<div class=" flex-1 flex items-start mb-10 md:mb-0 md:justify-start justify-center">
-					<img src="{{ active_theme_path()}}/assets/images/Logo.svg" class="max-w-full" alt>
+					<img src="/{{ active_theme_path()}}/assets/images/Logo.svg" class="max-w-full" alt>
 				</div>
 			</div>
 			<div class="item3  mt-10 md:mt-0   ">
