home page fixes

--- a/web/modules/custom/sharjah_dd/templates/front-initiatives.html.twig
+++ b/web/modules/custom/sharjah_dd/templates/front-initiatives.html.twig
@@ -1,12 +1,16 @@
-<section class="relative overflow-hidden md:overflow-visible py-16 md:py-[96px] after:absolute after:-bottom-[100px] after:-z-[1] after:h-[406px] after:w-[444px] md:after:bg-[url(../images/shape.svg)] after:bg-no-repeat">
+<section class="
+relative overflow-hidden py-16 
+      after:absolute after:bottom-[0] after:-z-[1] after:h-[406px] 
+      after:w-[444px] after:bg-no-repeat md:overflow-visible 
+      md:py-[96px] md:after:bg-[url(../images/shape.svg)] bg-contain">
 	<div class="container mx-auto px-4">
 		<div class="title max-w-[470px]">
-			<h6 class="mb-7 flex items-center gap-2 font-bold text-orange">
+			<h6 class="md:mb-7 flex items-center gap-2 font-bold text-orange mb-4">
 				<img src="{{ active_theme_path()}}/assets/images/headline.svg" alt/>
 				<span>
 					{{ items.highlight }}</span>
 			</h6>
-			<h2 class="md:mb-10 md:text-4xl mb-6  text-[30px]">
+			<h2 class="md:mb-10 md:text-4xl mb-6  text-[30px] text-[#353535]">
 				{{ items.title }}
 			</h2>
 			<div class="max-w-[300px]">
