--- a/web/modules/custom/sharjah_dd/templates/front-latest-news.html.twig
+++ b/web/modules/custom/sharjah_dd/templates/front-latest-news.html.twig
@@ -1,19 +1,20 @@
 <section class="md:py-[96px] py-16">
 	<div class="container mx-auto px-4">
 		<div class="title">
-			<h6 class="mb-7 flex items-center gap-2 font-bold text-orange">
+			<h6 class="md:mb-7 flex items-center gap-2 font-bold text-orange mb-4">
 				<img src="{{ active_theme_path()}}/assets/images/headline.svg" alt/>
-				
+
 				<span>
 					{{ items.highlight }}
 				</span>
 			</h6>
 
 			<div class="flex md:items-center mb-16 md:m-0 items-start justify-between flex-col md:flex-row">
-				<div class="max-w-[470px]">
-					
-						{{ items.description|raw }}
-					
+				<div class="max-w-[520px] mb-6 text-2xl md:mb-10 md:text-4xl">
+
+
+					{{ items.description|raw }}
+
 				</div>
 				<a href="{{ path('view.news.main_page') }}" class="group/btn relative inline-flex h-[51px] rounded-full border border-[#D4D4D8] bg-[#F9FAFB] py-3 pe-[65px] ps-7 text-[#6A7282] transition-all hover:border-orange hover:bg-[#FFF3E9] hover:text-orange">
 					<span class=" ">{{ "Discover more"|t }}</span>
