--- a/web/modules/custom/sharjah_dd/templates/front-services.html.twig
+++ b/web/modules/custom/sharjah_dd/templates/front-services.html.twig
@@ -2,11 +2,11 @@
       class="rounded-t-[60px] bg-[linear-gradient(180deg,#F6F7F8_74.15%,#F6F7F8_79.58%,#FFFFFF_100%)] py-16 md:py-[112px]">
       <div class="container mx-auto px-4">
         <div class="title">
-          <h6 class="mb-7 flex items-center gap-2 font-bold text-orange">
+          <h6 class="md:mb-7 flex items-center gap-2 font-bold text-orange mb-4">
             <img src="{{active_theme_path()}}/assets/images/headline.svg" alt />
             <span> {{ items.highlight }}</span>
           </h6>
-          <h2 class="md:mb-10 md:text-4xl mb-6  text-[30px]">
+          <h2 class="md:mb-10 md:text-4xl mb-6  text-[30px] text-[#353535]">
              {{ items.title }}
             </h2>
           <div class="max-w-[300px]">
