--- a/web/themes/custom/theme_sdd/templates/form/bef-links--services--service-type.html.twig
+++ b/web/themes/custom/theme_sdd/templates/form/bef-links--services--service-type.html.twig
@@ -3,9 +3,8 @@
   is_nested ? 'bef-nested'
 ] %}
 
- <div
-          class="md:my-[56px] mt-10 mb-8 flex items-center gap-3 overflow-auto md:overflow-hidden md:flex-wrap lg:flex-nowrap justify-between filter">
-       <div class="tabs flex-shrink-0 w-full lg:w-auto min-w-max">
+ <div >
+       <div class="tabs flex-shrink-0 w-full lg:w-auto min-w-max ">
     {% set is_nested = true %}
     {% for name, value in hiddens %}
       <input type="hidden" name="{{ name }}" value="{{ value }}" />
@@ -21,7 +20,7 @@
   '#attributes': item['#attributes']|merge({
     'class': (item['#attributes'].class|default([]))|merge([
       child in selected ? 'active' : '',
-      ' [.active]:bg-orange [.active]:text-white rounded-lg px-4 py-2 text-lg capitalize transition-all hover:bg-orange hover:text-white'
+      ' [.active]:bg-orange [.active]:text-white rounded-lg block px-4 py-2 text-lg capitalize transition-all hover:bg-orange hover:text-white'
     ])
   })
 }) %}
@@ -31,7 +30,7 @@
         {% set delta = (current_nesting_level - new_nesting_level) |abs %}
 
         {% if loop.first %}
-          <ul class="flex items-center  lg:gap-3 xl:gap-6 gap-1 rounded-[11px] border border-[#BCBCBC] p-3">
+          <ul class="flex items-center  lg:gap-3 xl:gap-6 gap-1 rounded-[11px] border border-[#BCBCBC] p-1">
         {% else %}
           {% if delta %}
             {% for i in 1..delta %}
@@ -44,7 +43,7 @@
           {% endif %}
         {% endif %}
 
-        <li>
+        <li class="flex-grow-1">
           {{ item }}
         {% if loop.last %}
           {% for i in new_nesting_level..0 %}
