--- a/web/themes/custom/theme_sdd/templates/node/node--view--initiatives--front.html.twig
+++ b/web/themes/custom/theme_sdd/templates/node/node--view--initiatives--front.html.twig
@@ -1,39 +1,55 @@
-<div class="relative flex h-full py-[60px] min-h-[600px] flex-col items-start justify-center">
+<div class="relative flex h-full min-h-[600px] flex-col items-start justify-center py-[60px]">
 	<div class="image absolute -z-[1] h-full w-full">
 		{{ content.field_image }}
 	</div>
 
-	<div class="w-full xl:px-[60px] md:px-[30px] px-6">
+	<div class="w-full px-6 md:px-[30px] xl:px-[60px] flex flex-col justify-between h-full">
+
+
 		<div class="mb-10 max-w-[450px] text-white">
+
 			<div class="mb-[26px] inline-block rounded-full bg-[#353535] p-3 text-xs font-bold text-white">
+
 				{{ content.field_tags|render|striptags|trim|raw }}
 			</div>
-			<h2 class="mb-8 md:text-[44px] text-4xl font-bold">
+			<h2 class="mb-8 text-4xl font-bold md:text-[44px]">
+
 				{{  short_label }}
 			</h2>
 
-			<h5 class="md:mb-8 mb-7 md:text-[28px] text-xl text-orange">
+			<h5 class="mb-7 text-xl text-orange md:mb-8 md:text-[28px]">
+
 				{{ content.field_sh_highlights|render|striptags|trim|raw }}
 			</h5>
 
 			<p class="md:text-lg">
+
 				{{ body_short|render|striptags|trim|raw }}
 			</p>
 		</div>
 
-		<div class="flex gap-3 flex-col md:flex-row">
-			<div class="w-full md:max-w-[275px] rounded-xl md:rounded-e-none bg-white md:p-7 p-4">
-				<h5 class="md:text-[33px] text-xl font-bold">{{ content.field_annual_carbon_removal|render|striptags|trim|raw }}
+		<div class="flex flex-col gap-3 md:flex-row">
+
+<div class="w-full rounded-xl bg-white p-4 md:max-w-[275px] md:rounded-e-none md:p-7 flex flex-col justify-end">
+
+
+				<h5 class="text-xl font-bold md:text-[33px]">{{ content.field_annual_carbon_removal|render|striptags|trim|raw }}
+
 					<span class="text-lg">{{"CO2"|t }}</span>
 				</h5>
-				<p class="md:text-lg text-sm text-[#353535]">
+				<p class="text-sm text-[#353535] md:text-lg">
+
 					{{ "Annual carbon removal"|t }}
 				</p>
 			</div>
 
-			<div class="w-full md:max-w-[275px] rounded-xl md:rounded-s-none bg-white md:p-7 p-4">
-				<h5 class="md:text-[33px] text-xl font-bold">{{ content.field_year_of_delivery }}</h5>
-				<p class="md:text-lg text-sm text-[#353535]">
+<div class="w-full rounded-xl bg-white p-4 md:max-w-[275px] md:rounded-s-none md:p-7 flex flex-col justify-end">
+
+
+				<h5 class="text-xl font-bold md:text-[33px]">{{ content.field_year_of_delivery }}</h5>
+
+				<p class="text-sm text-[#353535] md:text-lg">
+
 					{{ "Year of delivery"|t }}
 				</p>
 			</div>
