--- a/web/themes/custom/theme_sdd/templates/node/node--view--news--front.html.twig
+++ b/web/themes/custom/theme_sdd/templates/node/node--view--news--front.html.twig
@@ -78,9 +78,14 @@
   'md:border-b-0',
   'pb-6',
   'md:pb-0',
-  is_first ? 'border-orange' : 'border-[#D4D4D8]',
+' group/news',
+'hover:border-orange',
+
+is_first ? 'border-orange md:border-s-2' : 'border-[#D4D4D8]',
+
   'md:ps-7'
 ]|join(' ') %}
+
 
 
 
@@ -88,33 +93,50 @@
 {% set image_height_class = is_first ? 'h-[310px]' : 'h-[190px]' %}
 {% set view_link = is_first ? 
 'group/btn relative hidden md:inline-flex  h-[51px] rounded-full border border-orange bg-[#FFF3E9] py-3 pe-[65px] ps-7 text-orange transition-all' :
- 'hidden md:inline-flex group/btn relative  h-[51px] rounded-full border border-[#D4D4D8] bg-[#F9FAFB] py-3 pe-[65px] ps-7 text-[#6A7282] transition-all hover:border-orange hover:bg-[#FFF3E9] hover:text-orange' %}
+'hidden md:inline-flex group/btn relative  h-[51px] rounded-full border border-[#D4D4D8] bg-[#F9FAFB] py-3 pe-[65px] ps-7 text-[#6A7282] transition-all hover:border-orange hover:bg-[#FFF3E9] hover:text-orange group-hover/news:border-orange group-hover/news:bg-[#FFF3E9] group-hover/news:text-orange' %}
+
 
 {% set circle_round = is_first 
 ? 'absolute -end-1 top-0 flex h-[50px] w-[53px] items-center justify-center rounded-full border border-orange bg-orange transition-all' 
-: 'absolute -end-1 top-0 flex h-[50px] w-[53px] items-center justify-center rounded-full border border-[#D4D4D8] bg-white transition-all group-hover/btn:border-orange group-hover/btn:bg-orange' %}
+: 'absolute -end-1 top-0 flex h-[50px] w-[53px] items-center justify-center rounded-full border border-[#D4D4D8] bg-white transition-all group-hover/btn:border-orange group-hover/btn:bg-orange group-hover/news:border-orange group-hover/news:bg-orange' %}
+
 
 {% set arrow = is_first 
 ? 'fa-regular fa-arrow-right text-xs text-white' 
-: 'fa-regular fa-arrow-right text-xs text-[#99A1AF] group-hover/btn:text-white' %}
+: 'fa-regular fa-arrow-right text-xs text-[#99A1AF] group-hover/btn:text-white group-hover/news:text-white' %}
+
 
 
 <div class="{{ flex_ratio_class }} latest-news-front">
   <div class="{{ container_classes }}">
     <div class="{{ is_first ? 'w-full': ''}}">
-      <div class="image mb-11">
+<div class="image mb-11 {{ is_first ? '': 'hidden md:block'}}">
+
         {# Render field_image safely without extra tags #}
         <img src="{{ content.field_image|render|striptags|trim|raw }}" 
              class="{{ image_height_class }} w-full max-w-full rounded-sm object-cover" alt="" />
       </div>
-      <div class="mb-11">
+<div class="md:mb-11">
+
         <div class="mb-5 text-sm text-[#99A1AF]">
           {{ content.field_sh_date['#items'] ? content.field_sh_date }}
         </div>
-        <h3 class="text-2xl">
-          {# {{ short_label }} #}
-          {{ label}}
-        </h3>
+<div class="flex items-center justify-between gap-3">
+	<h3 class="md:max-w-auto   text-lg xl:text-2xl">
+{{ label}}
+
+	</h3>
+
+<a href="{{ url }}" class="group/btn relative inline-flex md:hidden">
+
+		<span class="flex h-[51px] w-[51px] flex-shrink-0 items-center justify-center rounded-full border border-[#D4D4D8] bg-white transition-all group-hover/btn:border-orange group-hover/btn:bg-orange">
+			<i class="fa-regular fa-arrow-right text-xs text-[#99A1AF] group-hover/btn:text-white"></i>
+		</span>
+	</a>
+</div>
+
+
+ 
       </div>
     </div>
 
