--- a/web/themes/custom/theme_sdd/templates/navigation/breadcrumb.html.twig
+++ b/web/themes/custom/theme_sdd/templates/navigation/breadcrumb.html.twig
@@ -15,7 +15,7 @@
 					{% if item.url %}
 						<a href="{{ item.url }}" class="underline">{{ item.text }}</a>
 					{% else %}
-						<span class="text-[#9DA4AE]">{{ item.text }}</span>
+						<span >{{ item.text }}</span>
 					{% endif %}
 					{% if not loop.last %}
 					/
