--- a/web/themes/custom/theme_sdd/templates/views/views-exposed-form--services--main-page.html.twig
+++ b/web/themes/custom/theme_sdd/templates/views/views-exposed-form--services--main-page.html.twig
@@ -19,11 +19,8 @@
 {% endif %}
 
 {% set classes = [
-	'my-[56px]',
-	 'flex',
-	  'items-center',
-	   'justify-between',
-	    'filter'
+'mb-8' ,'mt-10' ,'flex', 'flex-col', 'justify-between' ,'gap-3', 'filter' ,'md:my-[56px]' ,'xl:flex-row', 'xl:items-center'
+
 	] %}
 
 <div {{attributes.addClass(classes)}} id="services">
