--- a/web/themes/custom/theme_sdd/templates/node/node--leadership-message--teaser.html.twig
+++ b/web/themes/custom/theme_sdd/templates/node/node--leadership-message--teaser.html.twig
@@ -4,7 +4,7 @@
 		<div class="container mx-auto px-4">
 			<div class="grid md:gap-20 gap-10 md:grid-cols-2 ">
 
-				<div class="grid md:gap-10 gap-6 order-1 md:order-0">
+				<div class="grid   gap-6 order-1 md:order-0">
 					<h2 class="md:text-5xl text-[30px] font-light hidden md:block">
 						{{ label|render|striptags|trim|raw }}
 					</h2>
@@ -16,8 +16,8 @@
 						{{ label|render|striptags|trim|raw }}
 					</h2>
 
-					<div class="image">
-                        {{ content.field_image }}
+					<div class="image h-[360px] md:h-[650px] leader-image">
+						{{ content.field_image }}
 					</div>
 					<div class="bg-orange w-[47px] h-[2px] mt-7 mb-5"></div>
 					<div class="max-w-[280px]">
@@ -45,12 +45,14 @@
 
 
 				<div class>
-					<h2 class=" md:hidden mb-10 md:text-5xl text-[30px] font-light">
+					<h2 class="mb-10 text-[30px] font-light md:hidden md:text-5xl">
+
 						{{ label|render|striptags|trim|raw }}
 					</h2>
 
-					<div class="image">
-                        {{ content.field_image }}
+<div class="image h-[360px] md:h-[650px] leader-image">
+
+						{{ content.field_image }}
 					</div>
 					<div class="bg-orange w-[47px] h-[2px] mt-7 mb-5"></div>
 					<div class="max-w-[280px]">
@@ -64,7 +66,14 @@
 					</div>
 				</div>
 
-				<div class="grid md:gap-10 gap-6 order-1 md:order-0">
+				<div class="grid   gap-6 order-1 md:order-0">
+<h2 class="md:text-5xl text-[30px] font-light hidden md:block">
+
+
+						{{ label|render|striptags|trim|raw }}
+					</h2>
+
+
 					{{ content.body[0]['#text']|raw }}
 
 				</div>
