--- a/web/modules/custom/sharjah_dd/templates/header.html.twig
+++ b/web/modules/custom/sharjah_dd/templates/header.html.twig
@@ -24,7 +24,8 @@
 				<img src="{{ items.right_logo_url }}" class="max-w-full" alt/>
 			</div>
 
-			<button class="search lg:hidden">
+<button class="search lg:hidden show_search ">
+
 				<i class="fa-regular fa-search text-lg transition-all font-semibold"></i>
 
 			</button>
