--- a/web/themes/custom/theme_sdd/templates/paragraph/paragraph--tailored-to-meet-sharjah-audianc.html.twig
+++ b/web/themes/custom/theme_sdd/templates/paragraph/paragraph--tailored-to-meet-sharjah-audianc.html.twig
@@ -1,6 +1,6 @@
 <div class="p-8 mx-auto md:max-w-[450px]">
 	{{ content.field_shared_icon }}
-	<h5 class="my-6 text-2xl">{{ content.field_title|render|striptags|trim|raw  }}</h5>
+	<h5 class="my-6 text-2xl font-bold">{{ content.field_title|render|striptags|trim|raw  }}</h5>
 	<p class="text-[#6A7282]">
 		{{ content.field_description|render|striptags|trim|raw  }}
 	</p>
