--- a/web/themes/custom/theme_sdd/templates/views/views-view--service_providers--slider.html.twig
+++ b/web/themes/custom/theme_sdd/templates/views/views-view--service_providers--slider.html.twig
@@ -54,7 +54,7 @@
 
               <div class="relative flex gap-4">
                 <div class="swiper-button-prev !static  !m-0 after:!hidden">
-                  <svg width="16" height="16" viewBox="0 0 16 16" fill="none"
+                  <svg class="!w-5"   viewBox="0 0 16 16" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <path
                       d="M7.85156 13.4168L2.3432 7.99909C3.72483 6.64402 6.4699 3.93644 7.85157 2.58134L8.54672 3.25402C7.30386 4.47271 5.65991 6.09658 4.2095 7.52091L13.1786 7.52087L13.1786 8.47741L4.20948 8.47743L8.54672 12.7368L7.85156 13.4168Z"
@@ -63,7 +63,8 @@
 
                 </div>
                 <div class="swiper-button-next !static !m-0 after:!hidden">
-                  <svg width="16" height="16" viewBox="0 0 16 16" fill="none"
+<svg class="!w-5"   viewbox="0 0 16 16" fill="none"
+
                     xmlns="http://www.w3.org/2000/svg">
                     <path
                       d="M8.14844 13.4168L13.6568 7.99909C12.2752 6.64402 9.5301 3.93644 8.14843 2.58134L7.45328 3.25402C8.69614 4.47271 10.3401 6.09658 11.7905 7.52091L2.82142 7.52087L2.82141 8.47741L11.7905 8.47743L7.45328 12.7368L8.14844 13.4168Z"
