--- a/web/themes/custom/theme_sdd/assets/css/style2.css
+++ b/web/themes/custom/theme_sdd/assets/css/style2.css
@@ -301,9 +301,6 @@ body {
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
-  .top-1 {
-    top: calc(var(--spacing) * 1);
-  }
   .top-1\/2 {
     top: calc(1/2 * 100%);
   }
@@ -625,11 +622,11 @@ body {
   .\!w-3 {
     width: calc(var(--spacing) * 3) !important;
   }
+  .\!w-5 {
+    width: calc(var(--spacing) * 5) !important;
+  }
   .\!w-10 {
     width: calc(var(--spacing) * 10) !important;
-  }
-  .w-1 {
-    width: calc(var(--spacing) * 1);
   }
   .w-1\.5 {
     width: calc(var(--spacing) * 1.5);
@@ -706,6 +703,12 @@ body {
   .max-w-\[667px\] {
     max-width: 667px;
   }
+  .max-w-\[670px\] {
+    max-width: 670px;
+  }
+  .max-w-\[700px\] {
+    max-width: 700px;
+  }
   .max-w-\[1000px\] {
     max-width: 1000px;
   }
@@ -739,24 +742,11 @@ body {
   .flex-\[calc\(0\.5\*100\%-16px\)\] {
     flex: calc(0.5 * 100% - 16px);
   }
-  .flex-shrink {
-    flex-shrink: 1;
-  }
   .flex-shrink-0 {
     flex-shrink: 0;
   }
-  .flex-grow {
-    flex-grow: 1;
-  }
   .flex-grow-1 {
     flex-grow: 1;
-  }
-  .border-collapse {
-    border-collapse: collapse;
-  }
-  .-translate-y-1 {
-    --tw-translate-y: calc(var(--spacing) * -1);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .-translate-y-1\/2 {
     --tw-translate-y: calc(calc(1/2 * 100%) * -1);
@@ -1462,15 +1452,6 @@ body {
     -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
     backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
   }
-  .backdrop-filter {
-    -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
-    backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
-  }
-  .transition {
-    transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, visibility, content-visibility, overlay, pointer-events;
-    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
-    transition-duration: var(--tw-duration, var(--default-transition-duration));
-  }
   .transition-all {
     transition-property: all;
     transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
@@ -1824,6 +1805,12 @@ body {
       display: none;
     }
   }
+  .after\:h-\[18px\] {
+    &::after {
+      content: var(--tw-content);
+      height: 18px;
+    }
+  }
   .after\:h-\[130px\] {
     &::after {
       content: var(--tw-content);
@@ -1860,6 +1847,12 @@ body {
       width: 2px;
     }
   }
+  .after\:w-\[35px\] {
+    &::after {
+      content: var(--tw-content);
+      width: 35px;
+    }
+  }
   .after\:w-\[444px\] {
     &::after {
       content: var(--tw-content);
@@ -1894,6 +1887,18 @@ body {
     &::after {
       content: var(--tw-content);
       background-color: #D9D9D9;
+    }
+  }
+  .after\:bg-\[url\(\.\.\/images\/Search\.svg\)\] {
+    &::after {
+      content: var(--tw-content);
+      background-image: url(../images/Search.svg);
+    }
+  }
+  .after\:bg-\[16px_center\] {
+    &::after {
+      content: var(--tw-content);
+      background-position: 16px center;
     }
   }
   .after\:bg-no-repeat {
@@ -2439,6 +2444,11 @@ body {
   .md\:\!p-6 {
     @media (width >= 48rem) {
       padding: calc(var(--spacing) * 6) !important;
+    }
+  }
+  .md\:\!p-8 {
+    @media (width >= 48rem) {
+      padding: calc(var(--spacing) * 8) !important;
     }
   }
   .md\:p-6 {
@@ -3238,6 +3248,23 @@ footer .open i {
 }
 .view.view-services {
   padding: 64px 16px !important;
+}
+.iti.iti--allow-dropdown {
+  width: 100%;
+}
+.view.view-initiatives,.view-regulations {
+  padding: 64px 16px !important;
+}
+@media (max-width:767px) {
+  .view.view-initiatives,.view-regulations {
+    padding: 48px 16px !important;
+  }
+  form#views-exposed-form-header-search-popup-popup {
+    padding: 0 10px 20px;
+  }
+}
+ul#ui-id-1 {
+  display: none !important;
 }
 @property --tw-translate-x {
   syntax: "*";
