--- a/web/themes/custom/theme_sdd/templates/node/node--publications-reports--puplications-media.html.twig
+++ b/web/themes/custom/theme_sdd/templates/node/node--publications-reports--puplications-media.html.twig
@@ -1,32 +1,30 @@
-    <div
-              class="group/report flex flex-col justify-between rounded-2xl border border-[#E5E7EB] bg-white p-8 transition-all duration-300 hover:border-orange hover:shadow-[0px_20px_25px_-5px_#1B1D211A]"
-            >
-<div>
-	<div class="mb-6">
-		<h3 class="mb-2 text-xl">
-			{{ shorter_label }}
-		</h3>
-		<div class="text-sm text-[#6A7282]">
-			{{ node.getCreatedTime()|format_date('olivero_medium') }}
+<div class="group/report flex flex-col justify-between rounded-2xl border border-[#E5E7EB] bg-white px-4 py-6 md:!p-8 transition-all duration-300 hover:border-orange hover:shadow-[0px_20px_25px_-5px_#1B1D211A]">
+	<div>
+		<div class="mb-6">
+			<h3 class="mb-2 text-xl">
+				{{ shorter_label }}
+			</h3>
+			<div class="text-sm text-[#6A7282]">
+				{{ node.getCreatedTime()|format_date('olivero_medium') }}
+			</div>
+		</div>
+
+		<div class="text-[#6A7282]">
+			{{ body_short|render|striptags|trim|raw }}
 		</div>
 	</div>
 
-	<div class="text-[#6A7282]">
-		{{ body_short|render|striptags|trim|raw }}
+	<div class="mt-6 flex items-center justify-between">
+		<a href="{{ attachments.0['url'] }}" target="_blank" rel="noopener" class="group/btn relative inline-flex h-[51px] flex-shrink-0 rounded-full border border-[#D4D4D8] bg-[#F9FAFB] py-3 pe-[65px] ps-7 text-[#6A7282] transition-all hover:border-orange hover:bg-[#FFF3E9] hover:text-orange group-hover/report:border-orange group-hover/report:bg-[#FFF3E9] group-hover/report:text-orange">
+			<span class=" ">
+				{{ "Download"|t }}
+			</span>
+
+			<span class="absolute -end-1 top-0 flex h-[50px] w-[53px] items-center justify-center rounded-full border border-[#D4D4D8] bg-white transition-all group-hover/btn:border-orange group-hover/report:border-orange group-hover/btn:bg-orange group-hover/report:bg-orange">
+				<i class="fa-regular fa-arrow-right text-xs text-[#99A1AF] group-hover/btn:text-white group-hover/report:text-white"></i>
+			</span>
+		</a>
+
+		<p class="text-xs text-[#6A7282]">{{ attachments.0['label'] }}</p>
 	</div>
-</div>
-
-<div class="mt-6 flex items-center justify-between">
-	<a href="{{ attachments.0['url'] }}" target="_blank" rel="noopener" class="group/btn relative inline-flex h-[51px] flex-shrink-0 rounded-full border border-[#D4D4D8] bg-[#F9FAFB] py-3 pe-[65px] ps-7 text-[#6A7282] transition-all hover:border-orange hover:bg-[#FFF3E9] hover:text-orange group-hover/report:border-orange group-hover/report:bg-[#FFF3E9] group-hover/report:text-orange">
-		<span class=" ">
-			{{ "Download"|t }}
-		</span>
-
-		<span class="absolute -end-1 top-0 flex h-[50px] w-[53px] items-center justify-center rounded-full border border-[#D4D4D8] bg-white transition-all group-hover/btn:border-orange group-hover/report:border-orange group-hover/btn:bg-orange group-hover/report:bg-orange">
-			<i class="fa-regular fa-arrow-right text-xs text-[#99A1AF] group-hover/btn:text-white group-hover/report:text-white"></i>
-		</span>
-	</a>
-
-	<p class="text-xs text-[#6A7282]">{{ attachments.0['label'] }}</p>
-</div>
 </div>
