--- a/web/modules/custom/sharjah_dd/templates/front-services.html.twig
+++ b/web/modules/custom/sharjah_dd/templates/front-services.html.twig
@@ -21,7 +21,7 @@
 <!--        render service view end-->
               
  <div class="mt-[56px] text-center">
-          <a href
+          <a href="{{ path('view.services.main_page') }}"
             class="group/btn relative inline-flex h-[51px] rounded-full border border-[#D4D4D8] bg-[#F9FAFB] py-3 pe-[65px] ps-7 text-[#6A7282] transition-all hover:border-orange hover:bg-[#FFF3E9] hover:text-orange">
             <span class=" ">
             {{ "View all"|t }}
